apps/base/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        
    spec:
      restartPolicy: Always

      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"

      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:6.4.4.10685-ls317

        ports:
        - containerPort: 7878
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /media/movies

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: movies
        persistentVolumeClaim:
          claimName: media-shared-pvc
