apps/base/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: radarr.mkped.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-svc
                port:
                  number: 7878
  tls:
  - secretName: radarr-certificate-secret
